<resources>
    <string name="app_name">TimesUpMobile</string>
    <string name="main_title">Time\'s Up</string>
    <string name="msg_test">Ceci est un test</string>
    <string name="contact_mail">haja.dev@gmail.com</string>
    <string name="new_game">Nouvelle Partie</string>
    <string name="add_words">Ajout de mots</string>
    <string name="option">Options</string>
    <string name="exit">Quitter</string>
    <string name="reset_content">Réinitialiser Contenu</string>
    <string name="clear_content">Vider cache</string>
    <string name="content_reset">Contenu réinitialisé</string>
    <string name="content_cleared">Contenu nettoyé</string>
    <string name="back">Retour</string>
    <string name="loadData">Charger données</string>
    <string name="list_words">Liste des mots</string>
    <string name="difficulty">Difficulté</string>
    <string name="themes">Thèmes</string>
    <string name="time_per_session">Temps par manche</string>
    <string name="validate">Valider</string>
    <string name="background_image">Fond d\'ecran</string>
    <string name="theme">Thème</string>
    <string name="word">Mot</string>
    <string name="diff">Diff.</string>
    <string name="rules">Règles</string>
    <string name="play">Jouer</string>
    <string name="session">Manche</string>
    <string name="describe_the_word">Décrivez le mot</string>
    <string name="word_to_word">Mot pour mot</string>
    <string name="mimic_the_word">Mimez le mot</string>
    <string name="error">Erreur</string>
    <string name="end_game">Fin de partie</string>
</resources>
