<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_load_data"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/loadData"
            />

        <Button
            android:id="@+id/btn_reset_content"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_content"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_clear_content"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/clear_content"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</RelativeLayout>